--- a/employee-service.properties
+++ b/employee-service.properties
@@ -1,8 +1,8 @@
 server.port=8089
 
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
-spring.datasource.username=springstudent
-spring.datasource.password=springstudent
+spring.datasource.username=root
+spring.datasource.password=Gobagubbya_836
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
