--- a/department-service.properties
+++ b/department-service.properties
@@ -1,8 +1,8 @@
 server.port=8088
 
 spring.datasource.url=jdbc:mysql://localhost:3306/department_db
-spring.datasource.username=springstudent
-spring.datasource.password=springstudent
+spring.datasource.username=root
+spring.datasource.password=Gobagubbya_836
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
