--- a/organization-service.properties
+++ b/organization-service.properties
@@ -7,4 +7,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
-spring.boot.message=Welcome to Organization Service... Yo I'm updated bruh!!!
+spring.boot.message=Welcome to Organization Service... Yo I'm updated bruh!!! AGAIN!!!
