--- a/department-service.properties
+++ b/department-service.properties
@@ -2,7 +2,7 @@ server.port=8088
 
 spring.datasource.url=jdbc:mysql://localhost:3306/department_db
 spring.datasource.username=root
-spring.datasource.password=Gobagubbya_836
+spring.datasource.password=root
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
